--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -24,7 +24,7 @@ body{
     align-content: center;
     align-items: center;
     justify-content: center;
-    height: 150px;
+    height: 198px;
     background: #bdc3c7;  /*fallback for old browsers */
     background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);   /*Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2c3e50, #bdc3c7);  /*W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -66,4 +66,10 @@ body{
 
 .form_distribution{
     display: flex;
+}
+.links a {
+    color:white;
+}
+.master_link{
+    margin-left: 10px;
 }
